--- a/Desarrollo/HTML VERSION/index.html
+++ b/Desarrollo/HTML VERSION/index.html
@@ -86,7 +86,6 @@
 			<!-- grid -->
 			<div class="grid">
 				<div class="product">
-
 					<a href="product.html"
 					><img
 							src="./imagenes/products/1.png"
@@ -366,7 +365,7 @@
 		<div class="footer-title">
 			<a href="#header" class="logo nav-link">JACOBO COMMERCE</a>
 			<p class="footer-text">
-				Compra hoy y recibí mañana.
+				Compra hoy y recibe mañana.
 			</p>
 		</div>
 		<div >
