--- a/Desarrollo/HTML VERSION/product.html
+++ b/Desarrollo/HTML VERSION/product.html
@@ -362,7 +362,7 @@
 			<div class="grid footer-container">
 				<div class="footer-title">
 					<a href="#header" class="logo nav-link">JACOBO COMMERCE</a>
-					<p class="footer-text">Compra hoy y recibí mañana.</p>
+					<p class="footer-text">Compra hoy y recibe mañana.</p>
 				</div>
 				<div>
 					<h4 class="footer-title">Newslatter</h4>
